mageai/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mage-server
spec:
  selector:
    matchLabels:
      app: mage-server
  replicas: 1
  template:
    metadata:
      labels:
        app: mage-server
    spec:
      volumes:
      - name: pvc
        persistentVolumeClaim:
          claimName: mage-ai-pvc
      serviceAccountName: mage-user
      containers:
        - name: mage-server
          image: mageai/mageai:latest
          ports:
            - name: web
              containerPort: 6789
          volumeMounts:
          - name: pvc
            mountPath: /home/src
