mageai/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mage-instance
spec:
  type: LoadBalancer
  ports:
    - name: mage-web
      port: 6789
      targetPort: 6789

  selector:
    app: mage-instance
