mageai/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mage-instance-ingress
spec:
  rules:
  - http:
      paths:
      - path: /mage
        pathType: Prefix
        backend:
          service:
            name: mage-instance
            port:
              name: web
